# openstudio-deps

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/certs/: README.md
.devcontainer/scripts/: certctl-safe.sh  dev-env-init.sh  install-user-uv.sh  post-create.sh
.github/workflows/: ci.yml
src/osdep/: __init__.py  cli.py  config.py  download_utils.py  manager.py  platform_utils.py  validators.py
src/osdep/installers/: __init__.py  base.py  hpxml_installer.py  linux_installer.py  windows_installer.py
src/osdep/resources/: dependency_versions.json  version_catalog.json
tests/: test_config.py  test_dependencies.py  test_dependency_manager_windows.py
tests/integration/: test_linux_installation.py  test_windows_installation.py
